--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-COSC 4319 Software Engineering Project - Stock 101 \n Group Members: Erik Moctezuma, Thomas Welborn, Joshua Renfro, Cherluk Sumdin
+COSC 4319 Software Engineering Final Project - "Stock 101"
+Group Members: Erik Moctezuma, Thomas Welborn, Joshua Renfro, Cherluk Sumdin
